[package]
name = "payments-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { version = "1.1.6" }
rust_decimal = { version = "1.24.0" }
serde = { version = "1.0.137", features = ["derive"] }

[dev-dependencies]
assert_cmd = { version = "2.0.4" }
predicates = { version = "2.1.1" }
assert_fs = { version = "1.0.7" }